# haskell-fiction

./: LICENSE  README.md  haskell-fiction.cabal
app/: Main.hs
src/Lamp/: Location.hs
src/Lamp/Location/: Map.hs
