name:                haskell-fiction
version:             0.1.0.0
synopsis:            A seccond attempt of IFC
description:         Interactive Fiction is amazing. We provide a way to
                     write it expressively with Haskell.
homepage:            https://github.com/manpages/haskell-fiction
license:             BSD3
license-file:        LICENSE
author:              Jonn Mostovoy
copyright:           2015 Jonn Mostovoy
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lamp.Location
                     , Lamp.Location.Map
  build-depends:       base >= 4.7 && < 5
                     , text
                     , semigroups
  default-language:    Haskell2010

executable haskell-fiction-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , haskell-fiction
  default-language:    Haskell2010

test-suite haskell-fiction-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-fiction
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-fiction
